Feat: improved homepage and added other routes

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="my-app-dark">
+<html lang="en" class="my-app-dark min-h-screen">
   <head>
     <meta charset="utf-8" />
     <title>Portfolio</title>
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://unpkg.com/primeflex@latest/primeflex.css" />
     <link href="https://unpkg.com/primeicons/primeicons.css" rel="stylesheet" />
   </head>
-  <body class="m-0">
+  <body class="m-0 min-h-screen">
     <app-root></app-root>
   </body>
 </html>
